Added health checking endpoint to api
